Added registration, authorization, authentication using JWT
